<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:background="@android:color/transparent"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textAlignment="textEnd"
        android:textSize="30sp"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/output"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingEnd="20dp"
        android:textAlignment="textEnd"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextSizeCheck" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/la1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cbutton"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/red"
                android:onClick="onClearclick"
                android:text="@string/c"
                android:textSize="32sp"
                app:cornerRadius="36dp"

                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/openbracket"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/green"
                android:onClick="onDigitclick"
                android:text="("
                android:textSize="32dp"
                app:cornerRadius="36dp"

                tools:ignore="TextContrastCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/closebracket"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:onClick="onDigitclick"
                android:layout_margin="12dp"
                android:backgroundTint="@color/green"
                android:text="@string/openb"
                android:textSize="32sp"
                app:cornerRadius="36dp"

                tools:ignore="TextContrastCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/divide"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/orange"
                android:onClick="onOperatorclick"
                android:text="@string/div"
                android:textSize="32sp"
                app:cornerRadius="36dp"

                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/la2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/la1"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/seven"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/blue"
                android:onClick="onDigitclick"
                android:text="7"
                android:textSize="32dp"

                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/eight"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/blue"
                android:onClick="onDigitclick"
                android:text="@string/_8"
                android:textSize="32sp"
                app:cornerRadius="36dp"

                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/nine"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/blue"
                android:text="@string/_9"
                android:textSize="32dp"

                android:onClick="onDigitclick"
                app:cornerRadius="36dp"
                tools:ignore="SpUsage,TextContrastCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/multiply"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/orange"
                android:text="@string/star"
                android:onClick="onOperatorclick"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/la3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/la2"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/four"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/blue"
                android:text="@string/_4"
                android:textSize="32sp"
                android:onClick="onDigitclick"
                app:cornerRadius="36dp"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/five"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/blue"
                android:text="@string/_5"
                android:textSize="32sp"
                android:onClick="onDigitclick"
                app:cornerRadius="36dp"

                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/six"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/blue"
                android:text="6"
                android:textSize="32dp"
                android:onClick="onDigitclick"
                app:cornerRadius="36dp"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/plus"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/orange"
                android:text="+"
                android:textSize="32dp"
                android:onClick="onOperatorclick"
                app:cornerRadius="36dp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/la4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/la3"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/one"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/blue"
                android:text="@string/_1"
                android:onClick="onDigitclick"
                android:textSize="32sp"
                app:cornerRadius="36dp"

                tools:ignore="TextContrastCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/two"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/blue"
                android:text="2"
                android:textSize="32dp"
                android:onClick="onDigitclick"

                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/three"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/blue"
                android:text="3"
                android:textSize="32dp"
                android:onClick="onDigitclick"
                app:cornerRadius="36dp"

                tools:ignore="TextContrastCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/minus"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/orange"
                android:text="@string/dash"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                android:onClick="onOperatorclick"

                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/la5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/la4"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/ac"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/red"
                android:text="@string/ac"
                android:textSize="18sp"
                android:onClick="onACclick"
                app:cornerRadius="36dp"

                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/zero"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/blue"
                android:text="0"
                android:textSize="32dp"
                android:onClick="onDigitclick"
                app:cornerRadius="36dp"

                tools:ignore="TextContrastCheck,TextContrastCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dot"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/green"
                android:text="@string/dot"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                android:onClick="onDigitclick"

                tools:ignore="TextContrastCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/equal"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/equal"
                android:text="@string/equal"
                android:textSize="32sp"
                android:onClick="onEqualclick"
                app:cornerRadius="36dp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentTop="true"
            android:background="?android:attr/listDivider" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>